--- a/projects/gui/ui/newgamedlg.ui
+++ b/projects/gui/ui/newgamedlg.ui
@@ -31,7 +31,7 @@
            <string>人类</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -119,7 +119,7 @@
            <string>人类</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
